# RestAPI_app

./: .env  .gitignore  README.md  docker-compose.yaml  main.py  pyproject.toml
docs/: conf.py  index.rst
docs/_build/doctrees/: environment.pickle  index.doctree
docs/_build/html/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
src/: schemas.py
src/conf/: config.py
src/database/: db.py  models.py
src/repository/: contacts.py  users.py
src/routes/: auth.py  contacts.py  users.py
src/services/: auth.py  email.py
src/services/templates/: email_template.html
tests/: conftest.py  test_routes_auth.py  test_unit_repository_contacts.py  test_unit_repository_users.py
